--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -27,7 +27,10 @@
             <tbody>
               <tr th:each="item : ${cartItems}">
                 <td><input type="checkbox"></td>
-                <td><img th:src="${book != null and book.bookCover != null ? book.bookCover : '/images/bookCover/default.jpg'}" alt="책 이미지"></td>
+                <td>
+                  <img th:src="${book != null && book.bookCover != null ? book.bookCover : '/images/bookCover/default.jpg'}" alt="Book Cover">
+                </td>
+                
                 <td th:text="${item.bookTitle}"></td>
                 <td th:text="${item.bookPrice} + '원'"></td>
                 <td>
@@ -48,19 +51,15 @@
         <table>
           <tr>
             <td>총 상품가격</td>
-            <td>OOO 원</td>
-          </tr>
-          <tr>
-            <td>적립 마일리지</td>
-            <td>OOO p</td>
+            <td id="totalPrice">0 원</td>
           </tr>
           <tr>
             <td>총 주문 상품 수</td>
-            <td>OOO 개</td>
+            <td id="totalCount">0 개</td>
           </tr>
         </table>
       </div>
-      <a href="/order" class="selectBookOrderBtn">선택한 상품 주문</a>
+      <button class="selectBookOrderBtn" id="orderButton">선택한 상품 주문</button>
     </section>
   
     
@@ -156,7 +155,9 @@
       </div>
     </section>
   </main>
-  <div th:replace="common/footer :: footer"></div>
+  
+  <div th:replace="~{common/footer :: footer}"></div>
+
   <script src="/js/cart/cart.js"></script>
 </body>
 </html>
