1:1문의 작성내용 DB로 저장하기 완료. 근데 alert 문제가 해결이 안됐음

--- a/src/main/resources/templates/admin/query.html
+++ b/src/main/resources/templates/admin/query.html
@@ -89,24 +89,23 @@
     </div>
   </section>
 
-  <script src="/js/admin/query.js"></script>
-
+  
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-        const toggles = document.querySelectorAll(".faq-toggle");
-        toggles.forEach(toggle => {
-            toggle.addEventListener("click", function () {
+      const toggles = document.querySelectorAll(".faq-toggle");
+      toggles.forEach(toggle => {
+        toggle.addEventListener("click", function () {
                 const answer = document.querySelector(".supporting-text");
                 const icon = this.querySelector(".arrow-icon");
                 if (answer.style.display === "block") {
-                    answer.style.display = "none";
+                  answer.style.display = "none";
                 } else {
-                    answer.style.display = "block";
+                  answer.style.display = "block";
                 }
-            });
+              });
         });
     });
-</script>
-
+  </script>
+<script src="/js/customer/query.js"></script>
 </body>
 </html>
