--- a/src/main/resources/templates/customer/query.html
+++ b/src/main/resources/templates/customer/query.html
@@ -1,99 +1,94 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>1:1 문의</title>
   <link rel="stylesheet" href="/css/main/query.css">
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
-<main>
 
-  <body>
-    <header th:replace="~{common/common}"></header>
-    <div th:replace="~{common/side-menu}">  </div>
+<body>
+  <header th:replace="~{common/common}"></header>
+  <div th:replace="~{common/side-menu}"></div>
 
-      <section class="content-box">
+  <main>
+    <section class="content-box">
+      <div class="container">
+        <div class="query-container">
+          <div class="query-form">
+            <h1>1:1 문의</h1>
+            <hr><br><br><br>
 
-        <div class="container">
-          <div class="query-container">
-            <div class="query-form">
-              <h1>1:1 문의</h1>
-              <hr>
-              <br><br><br>
-              <form method="post" action="/query">
-                <div class="form-group">
-                  <label for="menu">
-                    <h4>문의유형</h4>
-                  </label>
-                  <select class="form-control" id="subject" name="menu">
-                    <option value="1">유형 선택</option>
-                    <option value="2">주문관련</option>
-                    <option value="3">배송관련</option>
-                    <option value="4">취소/환불</option>
-                    <option value="5">기타문의</option>
-                  </select>
-                </div>
-                <br>
-                <label for="title">
-                  <h4>제목</h4>
+            <!-- Main Form Start -->
+            <form method="post" action="/customer/query/submit" id="myForm" classname="myForm">
+              <div class="form-group">
+                <label for="menu">
+                  <h4>문의유형</h4>
                 </label>
-                <input type="text" class="form-control2" id="title" name="title">
-                <div class="form-group">
-                  <br>
-                  <label for="content">
-                    <h4>내용</h4>
-                  </label>
-                  <div id="editor-container" style="height: 300px;"></div>
-                  <form action="/submit" method="post" id="myForm">
-                    <br>
-                    <br>
-                    <button type="submit" class="btn btn-primary">작성하기</button>
+                <select class="form-control" id="subject" name="menu">
+                  <option value="1">유형 선택</option>
+                  <option value="2">주문관련</option>
+                  <option value="3">배송관련</option>
+                  <option value="4">취소/환불</option>
+                  <option value="5">기타문의</option>
+                </select>
+              </div>
+              <br>
 
+              <label for="title">
+                <h4>제목</h4>
+              </label>
+              <input type="text" class="form-control2" id="title" name="title" required>
 
-                  </form>
-                  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-                  <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+              <div class="form-group">
+                <br>
+                <label for="content">
+                  <h4>내용</h4>
+                </label>
+                <div id="editor-container" style="height: 300px;"></div>
 
-                  <script>
-                    var quill = new Quill('#editor-container', {
-                      theme: 'snow',
-                      modules: {
-                        toolbar: [
-                          [{ 'font': [] }, { 'size': [] }],
-                          ['bold', 'italic', 'underline'],
-                          [{ 'color': [] }, { 'background': [] }],
-                          [{ 'align': [] }],
-                          ['image']
-                        ]
-                      }
-                    });
+                <!-- Hidden Textarea for Quill Content -->
+                <textarea id="content" name="content" style="display: none;"></textarea>
+              </div>
+              <br><br>
+              <button type="submit" class="btn btn-primary">작성하기</button>
+            </form>
+            <!-- Main Form End -->
 
-                    // 폼 제출 시 에디터 내용을 textarea에 넣어줌
-                    document.getElementById('myForm').onsubmit = function () {
-                      document.getElementById('content').value = quill.root.innerHTML;
-                    };
-                  </script>
-
-
-                </div>
-              </form>
-            </div>
           </div>
         </div>
-   
+      </div>
     </section>
+  </main>
 
-</main>
+  <!-- 푸터 조각 삽입 -->
+  <footer th:replace="~{common/footer :: footer}"></footer>
 
+  <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+  <script src="/js/main/main.js"></script>
 
-<!-- 푸터 조각 삽입 -->
-<footer th:replace="~{common/footer :: footer}"></footer>
+  <script>
+    // Quill 에디터 초기화
+    var quill = new Quill('#editor-container', {
+      theme: 'snow',
+      modules: {
+        toolbar: [
+          [{ 'font': [] }, { 'size': [] }],
+          ['bold', 'italic', 'underline'],
+          [{ 'color': [] }, { 'background': [] }],
+          [{ 'align': [] }],
+          ['image']
+        ]
+      }
+    });
 
-<script src="/js/main/main.js"></script>
-
-<script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
-
+    // 폼 제출 시 에디터 내용을 숨겨진 textarea에 복사
+    document.getElementById('myForm').onsubmit = function () {
+      document.getElementById('content').value = quill.root.innerHTML;
+    };
+  </script>
 </body>
 
 </html>
