--- a/src/main/resources/templates/customer/query.html
+++ b/src/main/resources/templates/customer/query.html
@@ -7,6 +7,7 @@
   <title>1:1 문의</title>
   <link rel="stylesheet" href="/css/main/query.css">
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+  <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 </head>
 
 <body>
@@ -53,7 +54,7 @@
                 <textarea id="content" name="content" style="display: none;"></textarea>
               </div>
               <br><br>
-              <button type="submit" class="btn btn-primary">작성하기</button>
+              <button type="button" class="btn btn-primary" id="queryBtn">작성하기</button>
             </form>
             <!-- Main Form End -->
 
@@ -62,16 +63,13 @@
       </div>
     </section>
   </main>
-
+  <script src="/js/customer/query.js"></script>
   <!-- 푸터 조각 삽입 -->
   <footer th:replace="~{common/footer :: footer}"></footer>
 
-  <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
-  <script src="/js/main/main.js"></script>
-
   <script>
     // Quill 에디터 초기화
-    var quill = new Quill('#editor-container', {
+    var quill = new Quill('#editor-container', { // 대문자 Q로 수정
       theme: 'snow',
       modules: {
         toolbar: [
@@ -83,11 +81,6 @@
         ]
       }
     });
-
-    // 폼 제출 시 에디터 내용을 숨겨진 textarea에 복사
-    document.getElementById('myForm').onsubmit = function () {
-      document.getElementById('content').value = quill.root.innerHTML;
-    };
   </script>
 </body>
 
