--- a/src/main/resources/static/css/admin/query.css
+++ b/src/main/resources/static/css/admin/query.css
@@ -1,8 +1,8 @@
-/* *{
+*{
   border: 1px solid black;
   margin: 0;
   padding: 0;
-} */
+}
 
 .content-box{
   display: flex;
@@ -45,15 +45,12 @@
 }
 
 .query{
-  display: flex;
-  flex-direction: row;
   margin-bottom: 10px;
 }
 
 .queryContent{
-  display: flex;
-  flex-direction: row;
   margin-bottom: 10px;
+  width: 1500px;
 }
 
 .status{
