--- a/src/main/resources/templates/customer/support.html
+++ b/src/main/resources/templates/customer/support.html
@@ -11,7 +11,7 @@
 <body>
   <div th:replace="~{common/common}"></div>
 
-
+  <div th:replace= "~{common/side-menu}"></div>
   <main class="supportContainer">
     <h1>고객센터</h1>
     <section>
