--- a/src/main/resources/templates/common/side-menu.html
+++ b/src/main/resources/templates/common/side-menu.html
@@ -1,27 +1,23 @@
-<script src="https://kit.fontawesome.com/5eb8a8a2db.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/css/fragments/side-menu.css">
-
-<div th:fragment="side-menu">
-  <div class="sideBar">
-    <h3 class="menu">
-      <i class="fa-solid fa-question-circle"><a href="/customer/qna"></i>&nbsp;&nbsp;자주 묻는 질문(FAQ) </a>
-    </h3>
-
-    <h3 class="menu">
-      <i class="fa-solid fa-comments"></i>&nbsp;&nbsp;1:1 문의
-      <ul class="submenu">
-        <li><a href="/customer/query">&nbsp;&nbsp;&nbsp;-&nbsp;1:1 문의하기</a></li>
-        <li><a href="/customer/inquiry">&nbsp;&nbsp;&nbsp;-&nbsp;1:1 문의내역</a></li>
-      </ul>
-    </h3>
-
-    <h3 class="menu">
-      <a href="#"><i class="fa-solid fa-undo-alt"></i>&nbsp;&nbsp;반품/환불 정책</a>
-    </h3>
-
-    <h3 class="menu">
-      <a href="#"><i class="fa-solid fa-book"></i>&nbsp;&nbsp;책 구매 및 추천 관련 가이드</a>
-    </h3>
-
+  <script src="https://kit.fontawesome.com/5eb8a8a2db.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/fragments/side-menu.css">
+  <div th:fragment="side-menu">
+    <div class="sideBar">
+      <h3 class="menu">
+        <i class="fa-solid fa-question-circle"></i>&nbsp;&nbsp;<a href="/customer/qna">자주 묻는 질문(FAQ)</a>
+      </h3>
+  
+      <h3 class="menu" onclick="toggleDropdown('submenu1')">
+        <i class="fa-solid fa-comments"></i>&nbsp;&nbsp;1:1 문의
+      </h3>
+        <ul class="submenu active" id="submenu1">
+          <li><a href="/customer/query">&nbsp;&nbsp;&nbsp;-&nbsp;1:1 문의하기</a></li>
+          <li><a href="/customer/inquiry">&nbsp;&nbsp;&nbsp;-&nbsp;1:1 문의내역</a></li>
+        </ul>
+  
+      <h3 class="menu">
+        <a href="/customer/notice"><i class="fa-solid fa-bullhorn"></i>&nbsp;&nbsp;공지사항</a>
+      </h3>
+      
+      <script src="/js/fragments/side-menu.js"></script>
+    </div>
   </div>
-</div>
