일단 유지는 되게 만들어 놨는데 옵션으로 검색이 안되네여

--- a/src/main/resources/templates/common/loginHeader.html
+++ b/src/main/resources/templates/common/loginHeader.html
@@ -17,7 +17,8 @@
 
         <!-- 검색 바 -->
         <div class="search-bar">
-            <form action="/searchBookPage/searchBooks" method="get">
+            <form action="/searchBookPage/searchBooks" method="get"
+             th:value="${param.searchTitle ?: ''}">
                 <input type="text" name="searchTitle" placeholder="검색어를 입력하세요" />
                 <button type="submit">Search</button>
             </form>
