--- a/src/main/resources/templates/searchBookPage/searchBook.html
+++ b/src/main/resources/templates/searchBookPage/searchBook.html
@@ -11,10 +11,25 @@
 <body>
   <header th:replace="~{common/common}"></header>
   <main>
+    <div class="search-bar">
+      <form action="/searchBookPage/searchBooks" method="get" id="searchForm">
+        <!-- 검색어 입력 -->
+        <input type="text" name="searchTitle" placeholder="검색어를 입력하세요" th:value="${param.searchTitle ?: ''}" />
+        
+        <!-- 히든 필드 -->
+        <input type="hidden" name="categories" id="hiddenCategories">
+        <input type="hidden" name="preferences" id="hiddenPreferences">
+        
+        <!-- 검색 버튼 -->
+        <button type="submit">Search</button>
+    </form>
+    
+  </div>
     
     <!-- 선택한 값이 표시되는 영역 -->
-    <div id="selectedCategoryValues">선택한 항목:</div>
-    <div id="selectedPreferenceValues">선택한 항목:</div>
+    <div id="selectedCategoryValues" class="selectedCategoryValues">선택한 항목:</div>
+    <div id="selectedPreferenceValues" class="selectedPreferenceValues">선택한 항목:</div>
+
 
     <!-- 카테고리 버튼 -->
     <button id="categoryButton">카테고리 선택</button>
@@ -23,57 +38,97 @@
     <div id="checkboxCategory" class="checkbox-category">
         <!-- 4x5 체크박스 그리드 -->
         <div class="checkbox-categoryList">
-            <label><input type="checkbox" value="소설">소설</label>
-            <label><input type="checkbox" value="비문학">비문학</label>
-            <label><input type="checkbox" value="역사">역사</label>
-            <label><input type="checkbox" value="과학">과학</label>
-            <label><input type="checkbox" value="자기개발">자기개발</label>
-            <label><input type="checkbox" value="판타지">판타지</label>
-            <label><input type="checkbox" value="미스터리">미스터리</label>
-            <label><input type="checkbox" value="철학">철학</label>
-            <label><input type="checkbox" value="문학">문학</label>
-            <label><input type="checkbox" value="예술">예술</label>
-            <label><input type="checkbox" value="고전">고전</label>
-            <label><input type="checkbox" value="심리학">심리학</label>
-            <label><input type="checkbox" value="경제경영">경제경영</label>
-            <label><input type="checkbox" value="정치">정치</label>
-            <label><input type="checkbox" value="여행">여행</label>
-            <label><input type="checkbox" value="수필">수필</label>
-            <label><input type="checkbox" value="종교">종교</label>
-            <label><input type="checkbox" value="교육">교육</label>
-            <label><input type="checkbox" value="스포츠">스포츠</label>
-            <label><input type="checkbox" value="요리">요리</label>
+            <label><input type="checkbox" value="1"
+              th:checked="${param.category != null and param.category.contains('1')}">소설</label>
+            <label><input type="checkbox" value="2"
+              th:checked="${param.category != null and param.category.contains('2')}">비문학</label>
+            <label><input type="checkbox" value="3"
+              th:checked="${param.category != null and param.category.contains('3')}">역사</label>
+            <label><input type="checkbox" value="4"
+              th:checked="${param.category != null and param.category.contains('4')}">과학</label>
+            <label><input type="checkbox" value="5"
+              th:checked="${param.category != null and param.category.contains('5')}">자기개발</label>
+            <label><input type="checkbox" value="6"
+              th:checked="${param.category != null and param.category.contains('6')}">판타지</label>
+            <label><input type="checkbox" value="7"
+              th:checked="${param.category != null and param.category.contains('7')}">미스터리</label>
+            <label><input type="checkbox" value="8"
+              th:checked="${param.category != null and param.category.contains('8')}">철학</label>
+            <label><input type="checkbox" value="9"
+              th:checked="${param.category != null and param.category.contains('9')}">문학</label>
+            <label><input type="checkbox" value="10"
+              th:checked="${param.category != null and param.category.contains('10')}">예술</label>
+            <label><input type="checkbox" value="11"
+              th:checked="${param.category != null and param.category.contains('11')}">고전</label>
+            <label><input type="checkbox" value="12"
+              th:checked="${param.category != null and param.category.contains('12')}">심리학</label>
+            <label><input type="checkbox" value="13"
+              th:checked="${param.category != null and param.category.contains('13')}">경제경영</label>
+            <label><input type="checkbox" value="14"
+              th:checked="${param.category != null and param.category.contains('14')}">정치</label>
+            <label><input type="checkbox" value="15"
+              th:checked="${param.category != null and param.category.contains('15')}">여행</label>
+            <label><input type="checkbox" value="16"
+              th:checked="${param.category != null and param.category.contains('16')}">수필</label>
+            <label><input type="checkbox" value="17"
+              th:checked="${param.category != null and param.category.contains('17')}">종교</label>
+            <label><input type="checkbox" value="18"
+              th:checked="${param.category != null and param.category.contains('18')}">교육</label>
+            <label><input type="checkbox" value="19"
+              th:checked="${param.category != null and param.category.contains('19')}">스포츠</label>
+            <label><input type="checkbox" value="20"
+              th:checked="${param.category != null and param.category.contains('20')}">요리</label>
         </div>
     </div>
     
 
 <!-- Preference 버튼 -->
-<button id="preferenceButton">Preference 선택</button>
+<button id="preferenceButton">취향 선택</button>
 
 <!-- Preference 체크박스 창 (기본적으로 숨김) -->
 <div id="checkboxPreference" class="checkbox-category">
     <!-- 4x5 체크박스 그리드 -->
     <div class="checkbox-preferenceList">
-        <label><input type="checkbox" value="감성적">감성적</label>
-        <label><input type="checkbox" value="철학적">철학적</label>
-        <label><input type="checkbox" value="심리학적">심리학적</label>
-        <label><input type="checkbox" value="모험">모험</label>
-        <label><input type="checkbox" value="스릴">스릴</label>
-        <label><input type="checkbox" value="논리적">논리적</label>
-        <label><input type="checkbox" value="서정적">서정적</label>
-        <label><input type="checkbox" value="지적">지적</label>
-        <label><input type="checkbox" value="분석적">분석적</label>
-        <label><input type="checkbox" value="영감을 주는">영감을 주는</label>
-        <label><input type="checkbox" value="휴식과 치유">휴식과 치유</label>
-        <label><input type="checkbox" value="현실적">현실적</label>
-        <label><input type="checkbox" value="공상적">공상적</label>
-        <label><input type="checkbox" value="사회적">사회적</label>
-        <label><input type="checkbox" value="연애">연애</label>
-        <label><input type="checkbox" value="가족">가족</label>
-        <label><input type="checkbox" value="도전적">도전적</label>
-        <label><input type="checkbox" value="코믹한">코믹한</label>
-        <label><input type="checkbox" value="추리적">추리적</label>
-        <label><input type="checkbox" value="예술적">예술적</label>
+        <label><input type="checkbox" value="1"
+          th:checked="${param.preference != null and param.preference.contains('1')}">감성적</label>
+        <label><input type="checkbox" value="2"
+          th:checked="${param.preference != null and param.preference.contains('2')}">철학적</label>
+        <label><input type="checkbox" value="3"
+          th:checked="${param.preference != null and param.preference.contains('3')}">심리학적</label>
+        <label><input type="checkbox" value="4"
+          th:checked="${param.preference != null and param.preference.contains('4')}">모험</label>
+        <label><input type="checkbox" value="5"
+          th:checked="${param.preference != null and param.preference.contains('5')}">스릴</label>
+        <label><input type="checkbox" value="6"
+          th:checked="${param.preference != null and param.preference.contains('6')}">논리적</label>
+        <label><input type="checkbox" value="7"
+          th:checked="${param.preference != null and param.preference.contains('7')}">서정적</label>
+        <label><input type="checkbox" value="8"
+          th:checked="${param.preference != null and param.preference.contains('8')}">지적</label>
+        <label><input type="checkbox" value="9"
+          th:checked="${param.preference != null and param.preference.contains('9')}">분석적</label>
+        <label><input type="checkbox" value="10"
+          th:checked="${param.preference != null and param.preference.contains('10')}">영감을 주는</label>
+        <label><input type="checkbox" value="11"
+          th:checked="${param.preference != null and param.preference.contains('11')}">휴식과 치유</label>
+        <label><input type="checkbox" value="12"
+          th:checked="${param.preference != null and param.preference.contains('12')}">현실적</label>
+        <label><input type="checkbox" value="13"
+          th:checked="${param.preference != null and param.preference.contains('13')}">공상적</label>
+        <label><input type="checkbox" value="14"
+          th:checked="${param.preference != null and param.preference.contains('14')}">사회적</label>
+        <label><input type="checkbox" value="15"
+          th:checked="${param.preference != null and param.preference.contains('15')}">연애</label>
+        <label><input type="checkbox" value="16"
+          th:checked="${param.preference != null and param.preference.contains('16')}">가족</label>
+        <label><input type="checkbox" value="17"
+          th:checked="${param.preference != null and param.preference.contains('17')}">도전적</label>
+        <label><input type="checkbox" value="18"
+          th:checked="${param.preference != null and param.preference.contains('18')}">코믹한</label>
+        <label><input type="checkbox" value="19"
+          th:checked="${param.preference != null and param.preference.contains('19')}">추리적</label>
+        <label><input type="checkbox" value="20"
+          th:checked="${param.preference != null and param.preference.contains('20')}">예술적</label>
     </div>
 </div>
 
@@ -123,8 +178,6 @@
                 </div>
             </div>
         </a>
-    </div>
-    
         <div class="book-item-actions">
             <!-- 장바구니 버튼 클릭 시 singleCartBtn(this) 호출 -->
             <label class="buttonBag">
@@ -138,6 +191,8 @@
             </label>
         </div>
     </div>
+    </div>
+    
     </form>
     <div class="pagination-area" th:unless="${#lists.isEmpty(bookList)}">
 
@@ -180,11 +235,11 @@
       </ul>
   </main>
   <script th:inline="javascript">
-    const pagination = /*[[${pagination}]]*/ "페이지네이션객체";
-  </script>
+   const pagination = /*[[${pagination}]]*/ {};
+</script>
   <footer th:replace="~{common/footer :: footer}"></footer>
   <script src="/js/searchBookPage/allBook.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!--   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
 </body>
 
 </html>
