--- a/src/main/resources/static/css/admin/main.css
+++ b/src/main/resources/static/css/admin/main.css
@@ -22,6 +22,45 @@ html, body {
   overflow: hidden; /* 스크롤 없애기 */
 }
 
+.header{
+  width: auto;
+  height: 70px;
+  margin: 0;
+
+  display: flex;
+  flex-direction: row;
+
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+/* 로고 */
+.logo {
+  position: absolute;
+  left: 3%;
+  top: 5%;
+  transform: translate(-50%, -50%);
+}
+
+.logo img {
+  max-width: 80px;
+  max-height: 80px;
+}
+
+.function{
+  display: flex;
+  flex-direction: row;
+
+  justify-content: flex-end;
+
+  width: 500px;
+}
+
+.adminName{
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+}
+
 .content-box {
   display: flex;
   flex-direction: row;
@@ -157,6 +196,7 @@ html, body {
 .title{
   display: flex;
   flex-direction: row;
+  margin-top: 20px;
 }
 
 .btn-container{
@@ -266,11 +306,6 @@ html, body {
 
 
 
-
-
-
-
-
 /* 날짜 선택 필터 css */
 .date{
   width: 1500px;
@@ -295,7 +330,7 @@ html, body {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  height: 150px;
+  height: 100px;
 }
 
 .sales > div{
