--- a/src/main/resources/static/css/admin/review.css
+++ b/src/main/resources/static/css/admin/review.css
@@ -21,9 +21,10 @@ html, body {
   height: 100%;
   overflow: hidden; /* 스크롤 없애기 */
 }
+
 .header{
   width: auto;
-  height: 100px;
+  height: 70px;
   margin: 0;
 
   display: flex;
@@ -36,7 +37,7 @@ html, body {
 .logo {
   position: absolute;
   left: 3%;
-  top: 6%;
+  top: 5%;
   transform: translate(-50%, -50%);
 }
 
@@ -58,6 +59,17 @@ html, body {
   width: 50px;
   height: 50px;
   border-radius: 25px;
+}
+
+.content-box {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  gap: 20px;
+  width: 100%; 
+  min-height: 100vh;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 
@@ -113,72 +125,47 @@ html, body {
   display: block;
 }
 
-.content-box{
+
+
+
+
+.sort-dropdown {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 20px;
   display: flex;
   flex-direction: row;
-  align-items: start;
-  justify-content: start;
+  align-items: center;
+  justify-content: center;
 }
 
-.sideBar{
-  width: 300px;
-  height: 850px;
-  margin-right: 80px;
-}
-
-.content{
-  display: flex;
-  flex-direction: column;
-  width: 1500px;
-  height: 850px;
-}
-
-.sortSelect{
-  display: flex;
-  flex-direction: row;
+#sortSelect {
+  border: 1px solid rgb(37, 37, 37);
+  border-radius: 4px;
+  background-color: #f5f5f5;
+  font-weight: 600;
+  color: rgb(37, 37, 37);
+  padding: 12px;
   width: 200px;
-  height: 40px;
-  margin-left: 1200px;
-  margin-bottom: 10px;
-  text-align: center;
-  border-radius: 10px;
-  font-size: large;
-  font-weight: bold;
+  text-align: left;
+  cursor: pointer;
+  font-size: 20px;
+  appearance: none; 
+  background-image: url('data:image/svg+xml;utf8,<svg fill="%23000000" height="10" viewBox="0 0 24 24" width="10" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 12px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.query-box{
-  width: 1500px;
-  height: 850px;
+#sortSelect:hover,
+#sortSelect:focus {
+  border-color: #007bff;
+  box-shadow: 0 2px 6px rgba(0, 123, 255, 0.2);
 }
 
-.query{
-  margin-bottom: 10px;
+#sortSelect option {
+  font-size: 15px;
+  color: rgb(37, 37, 37);
 }
-
-.queryContent{
-  margin-bottom: 10px;
-  width: 1500px;
-}
-
-.queryNo{
-  width: 100px;
-  text-align: center;
-}
-.status{
-  width: 200px;
-  text-align: center;
-}
-.title{
-  width: 800px;
-  text-align: center;
-}
-.writer{
-  width: 200px;
-  text-align: center;
-}
-.writeDate{
-  width: 200px;
-  text-align: center;
-}
-
-
