--- a/src/main/resources/static/css/admin/sales.css
+++ b/src/main/resources/static/css/admin/sales.css
@@ -1,5 +1,64 @@
+/* 폰트 스타일 */
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* 드롭다운 스타일 */
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
 *{
-  border: 1px solid black;
+  background-color: #EFEFEF;
+  font-family: 'Pretendard-Regular';
+  box-sizing: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden; /* 스크롤 없애기 */
+}
+
+.header{
+  width: auto;
+  height: 70px;
+  margin: 0;
+
+  display: flex;
+  flex-direction: row;
+
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+/* 로고 */
+.logo {
+  position: absolute;
+  left: 3%;
+  top: 5%;
+  transform: translate(-50%, -50%);
+}
+
+.logo img {
+  max-width: 80px;
+  max-height: 80px;
+}
+
+.function{
+  display: flex;
+  flex-direction: row;
+
+  justify-content: flex-end;
+
+  width: 500px;
+}
+
+.adminName{
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
 }
 
 .content-box{
@@ -9,10 +68,56 @@
   
 }
 
-.sideBar{
-  width: 300px;
-  height: 850PX;
-  margin-right: 50px;
+/* 사이드바 css입니당 */
+.sideBar {
+  min-width: 250px;
+  height: 100vh;
+  background-color: #EFEFEF;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  box-sizing: border-box;
+  flex-shrink: 0;
+}
+
+.menu {
+  margin-bottom: 20px;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+  position: relative;
+}
+
+.menu:hover {
+  color: #007bff;
+}
+
+
+.submenu {
+  list-style: none;
+  margin: 10px 0 0 15px;
+  padding: 0;
+  display: none;
+}
+
+.submenu li {
+  margin-bottom: 10px;
+}
+
+.submenu li a {
+  color: #555;
+  text-decoration: none;
+  font-size: 14px;
+  transition: color 0.3s ease;
+}
+
+.submenu li a:hover {
+  color: #007bff;
+}
+
+.menu.active .submenu {
+  display: block;
 }
 
 .content{
