--- a/src/main/resources/templates/admin/faq.html
+++ b/src/main/resources/templates/admin/faq.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>관리자 메인페이지</title>
+  <title>관리자 문의 관리 페이지</title>
 
-  <link rel="stylesheet" href="/css/admin/sales.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/5eb8a8a2db.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/admin/faq.css">
 </head>
 <body>
   <section class="header">
     <div class="logo">
       <a href="/admin">
-          <img src="/images/logo.png" alt="Logo">
+          <img src="/images/고스트 코딩왕.png" alt="Logo">
       </a>
     </div>
   
@@ -58,6 +58,7 @@
         <ul class="submenu">
           <li><a href="/admin/myPage">&nbsp;&nbsp;&nbsp;-&nbsp;내정보 변경</a></li>
           <li><a href="/admin">&nbsp;&nbsp;&nbsp;-&nbsp;회원 관리</a></li>
+          <li><a href="/admin/signUp">&nbsp;&nbsp;&nbsp;-&nbsp;관리자 계정 생성</a></li>
         </ul>
       </h3>
     
@@ -77,95 +78,63 @@
           <li><a href="/admin/newBook">&nbsp;&nbsp;&nbsp;-&nbsp;새 책 등록</a></li>
         </ul>
       </h3>
-    
       <h3 class="menu">
         <i class="fa-solid fa-question"></i>&nbsp;&nbsp;고객 지원
         <ul class="submenu">
           <li><a href="/admin/query">&nbsp;&nbsp;&nbsp;-&nbsp;문의 관리</a></li>
           <li><a href="/admin/review">&nbsp;&nbsp;&nbsp;-&nbsp;리뷰 관리</a></li>
+          <li><a href="/admin/support">&nbsp;&nbsp;&nbsp;-&nbsp;공지사항 관리</a></li>
           <li><a href="/admin/faq">&nbsp;&nbsp;&nbsp;-&nbsp;FAQ 관리</a></li>
         </ul>
       </h3>
     </div>
   
-    <div class="content">
-      <h2>매출관리</h2>
-      <div class="date">
-        <button>1주일</button>
-        <button>1개월</button>
-        <button>6개월</button>
-        <input type="date">
-        ~ &nbsp; &nbsp;
-        <input type="date">
-      </div>
-    
-      <div class="graph-box">
-    
-        <div class="sales"> 
-          <div>거래액 : 0원</div>
-          <div>순거래액 : 0원</div>
-          <div>거래취소액 : 0원</div>
-        </div>
-    
-        <div class="content-box">
-          <div class="graph">
-            <div class="graph-title">
-              <div>거래액 그래프</div>
-              <div>클릭 된 버튼 / 정렬 기준</div>
-              
-              <div class="sort-dropdown">
-                <select id="sortSelect">
-                    <option value="sales">전체 매출</option>
-                    <option value="category">카테고리</option>
-                    <option value="company">출판사</option>
-                    <option value="online">온라인</option>
-                    <option value="offline">오프라인</option>
-                </select>
-              </div>
-      
   
-            </div>
-            <div class="graph-section">
-              <a href="#">그래프 그릴거예여</a>
-            </div>
-          </div>
+    <div class="content">
+      <h2>FAQ 관리</h2>
+      <select class="sortSelect">
+        <option value="all">전체보기</option>
+        <option value="Y">노출</option>
+        <option value="N">비노출</option>
+      </select>
+      <button>전체 선택 해제</button>
+      <button>선택한 내용 상태 변경</button>
+      <button>선택한 내용 삭제</button>
     
-          <div class="salesRank">
-            <h2>판매 순위</h2>
-            <table class="sales-table" border="1" >
-              <thead>
-                <tr>
-                  <th>책 번호</th>
-                  <th>책이름</th>
-                  <th>카테고리</th>
-                  <th>판매수량</th>
-                  <th>수익</th>
-                </tr>
-              </thead>
-              <tbody  id="salesRank">
-                <tr>
-                  <th>1️⃣</th>
-                  <td>책이름</td>
-                  <td>카테고리</td>
-                  <td>판매수량</td>
-                  <td>수익</td>
-                </tr>
-              </tbody>
-            </table>
-            <div class="pagination-area" >
-              <ul class="pagination">
-              
-                
-              </ul>
-            </div>
-          </div>
-        </div>
+      <table class="faq-box">
+        <thead class="faq">
+          <tr>
+            <th class="checkbox">
+              <input type="checkbox">
+            </th>
+            <th class="faqNo">글 번호</th>
+            <th class="title">제목</th>
+            <th class="content">내용</th>
+            <th class="status">노출여부</th>
+          </tr>
+        </thead>
+
+        <tbody class="faqContent"> 
+          <tr>
+            <td>
+              <input type="checkbox">
+            </td>
+            <td>1</td>
+            <td>어떻게 새로운 1:1 문의를 등록하나요?</td>
+            <td>1:1 문의를 등록하려면 고객센터 페이지의 "1:1 문의하기" 버튼을 클릭하세요. 등록 양식을 작성한 후 "등록" 버튼을 누르면 문의가 접수됩니다. 접수된 문의는 마이페이지에서 확인 가능합니다.</td>
+            <td>N</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="pagination-area" >
+        <ul class="pagination">
+        
+          
+        </ul>
       </div>
     </div>
   </section>
 
-  <script src="/js/admin/sales.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/js/admin/faq.js"></script>
 </body>
 </html>
