--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -9,18 +9,54 @@
   <link rel="stylesheet" href="/css/admin/main.css">
 </head>
 <body>
-  <header>
-    <h1>우측에 이름, 직급(담당업무)/비밀번호/이메일 변경 페이지로 이동</h1>
-  </header>
+  <section class="header">
+    <div class="logo">
+      <a href="/admin">
+          <img src="/images/고스트 코딩왕.png" alt="Logo">
+      </a>
+    </div>
+  
+   
+    <div class="function">
+      <!-- 알림 영역 -->
+      <div class="notification-container">
+       
+         <!-- 알림 버튼 -->
+        <button class="notification-btn" id="my-element">
+          <i class="fa-regular fa-bell">.</i>
+          <!-- 알림 개수 표시 -->
+          <div class="notification-count-area"></div>
+        </button>
+        
+        <!-- 알림 목록 -->
+        <ul class="notification-list">
+          
+        </ul>
+        
+      </div>
+      
+      <!-- 관리자 담당 업무 -->
+      <div class="adminName">
+        <div>
+          담당
+        </div>
+      </div>
+  
+      <!-- 채팅방 입장 아이콘 -->
+      <div class="chatting">
+        채팅방
+      </div>
+    </div>
+
+  </section>
   <main>
     <section class="content-box">
       <div class="sideBar">
         <h3 class="menu">
           <i class="fa-solid fa-users"></i>&nbsp;&nbsp;사용자 관련 관리
           <ul class="submenu">
+            <li><a href="/admin/myPage">&nbsp;&nbsp;&nbsp;-&nbsp;내정보 변경</a></li>
             <li><a href="/admin">&nbsp;&nbsp;&nbsp;-&nbsp;회원 관리</a></li>
-            <li><a href="/admin/query">&nbsp;&nbsp;&nbsp;-&nbsp;문의 관리</a></li>
-            <li><a href="/admin/review">&nbsp;&nbsp;&nbsp;-&nbsp;리뷰 관리</a></li>
           </ul>
         </h3>
       
@@ -35,9 +71,18 @@
         <h3 class="menu">
           <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;도서 관리
           <ul class="submenu">
-            <li><a href="/admin/newBook">&nbsp;&nbsp;&nbsp;-&nbsp;새 책 등록</a></li>
             <li><a href="/admin/manager">&nbsp;&nbsp;&nbsp;-&nbsp;재고 관리</a></li>
             <li><a href="/admin/request">&nbsp;&nbsp;&nbsp;-&nbsp;발주 요청</a></li>
+            <li><a href="/admin/newBook">&nbsp;&nbsp;&nbsp;-&nbsp;새 책 등록</a></li>
+          </ul>
+        </h3>
+      
+        <h3 class="menu">
+          <i class="fa-solid fa-question"></i>&nbsp;&nbsp;고객 지원
+          <ul class="submenu">
+            <li><a href="/admin/query">&nbsp;&nbsp;&nbsp;-&nbsp;문의 관리</a></li>
+            <li><a href="/admin/review">&nbsp;&nbsp;&nbsp;-&nbsp;리뷰 관리</a></li>
+            <li><a href="/admin/faq">&nbsp;&nbsp;&nbsp;-&nbsp;FAQ 관리</a></li>
           </ul>
         </h3>
       </div>
