--- a/src/main/resources/templates/common/side-menu.html
+++ b/src/main/resources/templates/common/side-menu.html
@@ -10,8 +10,8 @@
         <i class="fa-solid fa-comments"></i>&nbsp;&nbsp;1:1 문의
       </h3>
         <ul class="submenu active" id="submenu1">
-          <li><a href="/customer/query">&nbsp;&nbsp;&nbsp;-&nbsp;1:1 문의하기</a></li>
-          <li><a href="/customer/inquiry">&nbsp;&nbsp;&nbsp;-&nbsp;1:1 문의내역</a></li>
+          <li><a href="/customer/query" th:if= "${session.loginMember}">&nbsp;&nbsp;&nbsp;-&nbsp;1:1 문의하기</a></li>
+          <li><a href="/customer/inquiry" th:if= "${session.loginMember}">&nbsp;&nbsp;&nbsp;-&nbsp;1:1 문의내역</a></li>
         </ul>
   
       <h3 class="menu">
