--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -21,6 +21,8 @@
                 <input type="text" name="searchTitle" placeholder="검색어를 입력하세요" 
                 th:value="${param.searchTitle ?: ''}"/>
                 <button type="submit">Search</button>
+                <input type="hidden" name="categories" id="hiddenCategories">
+                <input type="hidden" name="preferences" id="hiddenPreferences">
             </form>
         </div>
 
