20241119 취향조사페이지 프론트

--- a/src/main/resources/templates/common/loginHeader.html
+++ b/src/main/resources/templates/common/loginHeader.html
@@ -28,7 +28,7 @@
         <!-- 사용자 메뉴 -->
         <div class="user-menu">
             <a href="/member/logout" class="btn btn-primary headerLogoutBtn"> 로그아웃</a>
-            <a href="/myPage" class="btn btn-primary headerJoinBtn"> 마이페이지</a>
+            <a href="/myPage/info" class="btn btn-primary headerJoinBtn"> 마이페이지</a>
             <a href="/cart" class="btn btn-primary headerCartBtn"> 장바구니</a>
         </div>
     </header>
