결제 기능 구현 중.... 주소 추가 가능

--- a/src/main/resources/static/css/order/order.css
+++ b/src/main/resources/static/css/order/order.css
@@ -12,6 +12,17 @@
   font-weight: 100;
 }
 
+
+.addressForm{
+  width: 40%;
+  margin-top: 20px;
+}
+
+#additionalAddresses{
+  width: 40%;
+  margin-top: 20px;
+}
+
 .orderMain{
   margin-left: 18%;
 }
@@ -37,8 +48,4 @@
   width: 300px;
   min-width: 300px;
   margin: 10px;
-}
-
-.addressContainer{
-  width: 40%;
 }
