--- a/src/main/resources/templates/order/afterOrder.html
+++ b/src/main/resources/templates/order/afterOrder.html
@@ -17,7 +17,7 @@
   </section>
 
   <h4>주문 날짜       주문 번호</h4>
-  <div class="orderMainContainer">
+  <!-- <div class="orderMainContainer">
     <section>
       <div>
         <h2>주문 정보</h2>
@@ -54,7 +54,7 @@
     </section>
   
     
-  </div>
-  <script src="/static/js/order/afterOrder"></script>
+  </div> -->
+  <script src="/static/js/order/afterOrder"></script> 
 </body>
 </html>
